fix(badge): whitespace:noWrap

--- a/packages/vapor/scss/components/badge.scss
+++ b/packages/vapor/scss/components/badge.scss
@@ -7,6 +7,7 @@
     color: var(--badge-text-color);
     font-weight: var(--badge-font-weight);
     line-height: var(--badge-line-height);
+    white-space: nowrap;
     text-align: center;
     background-color: var(--badge-background-color);
     border: var(--badge-border);
